Added baseurl shortcode

--- a/content/_index.html
+++ b/content/_index.html
@@ -3,3 +3,5 @@ title = "Licencje, wynajem i sprzedaż śmigłowców - Helipoland.com"
 +++
 
 Strona główna
+
+<img src="{{< baseurl >}}/images/RobinsonHelicopter-1-1800x1200.jpg" />
