--- a/archetypes/default.html
+++ b/archetypes/default.html
@@ -1,6 +1,14 @@
-+++
-title: "{{ replace .Name "-" " " | title }}"
+---
+title: "{{ replace .TranslationBaseName "-" " " | title }}"
 date: {{ .Date }}
+lastmod: {{ .Date }}
 draft: true
-+++
+description: ""
+
+tags: []
+categories: []
+
+featuredImage: ""
+featuredImagePreview: ""
+---
 
