--- a/archetypes/default.html
+++ b/archetypes/default.html
@@ -1,7 +1,7 @@
 ---
 title: "{{ replace .TranslationBaseName "-" " " | title }}"
-date: {{ .Date }}
-lastmod: {{ .Date }}
+date: "{{ .Date }}"
+lastmod: "{{ .Date }}"
 draft: true
 description: ""
 
